--- a/imports/client/user/user.html
+++ b/imports/client/user/user.html
@@ -42,6 +42,24 @@
                         </ul>
                     </div>
                 </div>
+                {{#if isAdmin}}
+                    <div class="col-xs-12 col-sm-6 col-md-5 col-lg-4">
+                        <div class="panel panel-default">
+                            <div class="panel-body">
+                                <button class="btn btn-default action-remove-user">
+                                    Löschen
+                                </button>
+                                <button class="btn btn-default action-block-user">
+                                    {{#if isDisabled}}
+                                        Entsperren
+                                    {{else}}
+                                        Sperren
+                                    {{/if}}
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                {{/if}}
                 <div class="col-xs-12 col-sm-6 col-md-7 col-lg-4">
                     <div class="panel panel-default">
                         <!-- Default panel contents -->
