--- a/imports/client/tournaments/tournament.html
+++ b/imports/client/tournaments/tournament.html
@@ -9,6 +9,7 @@
             <div class="modal-content">
                 {{#autoForm schema=tournamentSchema collection="UltiSite.Tournaments" doc=this.tournament id="tournamentUpdateForm" type=this.type}}
                     <div class="modal-header">
+                        <button type="submit" class="confirm">Speichern</button>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                             <span class="fa fa-close"></span>
                         </button>
@@ -16,11 +17,16 @@
                             <h4 class="modal-title" id="myModalLabel">Turnierdaten editieren</h4>
                         {{else}}
                             <h4 class="modal-title" id="myModalLabel">Turnier eintragen</h4>
-                            Nach dem Eintragen des Turniers müssen diesem noch ein Team hinzugefügt werden, damit sich Spieler eintragen können.
                         {{/if}}
                     </div>
                     <div class="modal-body">
                         <fieldset class="row">
+                            <div class="col-xs-12">
+                                <span class="fa fa-info-circle fa-lg fa-fw"></span>
+                                Nach dem Eintragen des Turniers muss
+                                noch ein Team hinzugefügt werden, 
+                                damit sich Spieler eintragen können.
+                            </div>
                             <div class="col-xs-7">
                                 {{> afQuickField name='name'}}
                             </div>
@@ -50,7 +56,7 @@
                             </div>
                         </fieldset>
                     </div>
-                    <div class="modal-footer">
+                    <div class="modal-footer hidden-xs">
                         <button type="submit" class="btn btn-primary">Speichern</button>
                     </div>
                 {{/autoForm}}
