fixed saving practices, fixed forms bug with date

--- a/imports/client/practices/practice.html
+++ b/imports/client/practices/practice.html
@@ -53,16 +53,16 @@
                         <div class="col-xs-6">
                             {{> afQuickField name='weekday' }}
                         </div>
-                        <div class="col-xs-3">
+                        <div class="col-xs-12 col-sm-3">
                             {{> afQuickField name='start' data-date-format='DD.MM.YYYY' data-date-language='de-DE'}}
                         </div>
-                        <div class="col-xs-3">
+                        <div class="col-xs-12 col-sm-3">
                             {{> afQuickField name='end' data-date-format='DD.MM.YYYY' data-date-language='de-DE'}}
                         </div>
-                        <div class="col-xs-3">
+                        <div class="col-xs-6 col-sm-3">
                             {{> afQuickField name='startTime'}}
                         </div>
-                        <div class="col-xs-3">
+                        <div class="col-xs-6 col-sm-3">
                             {{> afQuickField name='duration' }}
                         </div>
                         <div class="col-xs-12">
